--- a/rm2000/Info.plist
+++ b/rm2000/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>External Assets/Tachyo.otf</string>
+		<string>Fonts/Tachyo.otf</string>
 	</array>
 </dict>
 </plist>
