fix fonts not getting registered by Xcode

--- a/rm2000/Info.plist
+++ b/rm2000/Info.plist
@@ -4,7 +4,8 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Fonts/Tachyo.otf</string>
+		<string>Tachyo.otf</string>
+		<string>TASAExplorer-SemiBold.otf</string>
 	</array>
 </dict>
 </plist>
